--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "url2json-types",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "index.d.ts",
   "repository": "https://github.com/Asarua/url2json-types.git",
   "license": "MIT",
-  "author": "Asarua <asarua@icloud.com>"
+  "author": "Asarua <asarua@icloud.com>",
+  "keywords": [
+    "typescript",
+    "url2json"
+  ]
 }
